src/test/test-models/good/parser-generator/multidim_var_gen_qs_ar45_mat23.stan
generated quantities {
  matrix<lower=0,upper=1>[2,3] ar_mat[4,5];
}
